<?xml version="1.0"?>
<package format="2">
  <name>rostate_machine_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The rostate_machine_rviz_plugins package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostate_machine</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>graphviz</build_depend>
  <build_depend>graphviz-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostate_machine</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>graphviz</build_export_depend>
  <build_export_depend>graphviz-dev</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostate_machine</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend>graphviz-dev</exec_depend>
  <exec_depend>rosdoc_lite</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
